Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122893

Sending QNetworkRequest fails on singlethreaded WASM

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.6, 6.6.3, 6.7.0, 6.8.0 FF
    • 6.6
    • Network
    • None
    • WebAssembly
    • a5b00cefe (dev), 9a59f6bc5 (6.7), 8341bfd96 (6.6), d40c5d02e (tqtc/lts-6.5), afdec8850 (6.6.3), dbda7d2f8 (6.7.0)

    Description

      Sending QNetworkRequest on singlethreaded WebAssembly build fails due to accessing header data through dangling pointer.

      To reproduce:

              QNetworkAccessManager manager;
              QNetworkRequest request(QUrl("https://www.geojs.io/docs/v1/endpoints/country/"));
              request.setRawHeader("Authorization", "xxxxx");
              QNetworkReply *reply = manager.get(request);
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-122893
          # Subject Branch Project Status CR V

          Activity

            People

              piwierci Piotr Wierciński
              piwierci Piotr Wierciński
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: