src/corelib/kernel/qeventdispatcher_wasm_p.h
@@ -54,6 +54,7 @@ public:
     void interrupt() override;
     void wakeUp() override;
 
+    static void runOnMainThread(std::function<void(void)> fn);
     static void runOnMainThreadAsync(std::function<void(void)> fn);
     static void socketSelect(int timeout, int socket, bool waitForRead, bool waitForWrite,
                             bool *selectForRead, bool *selectForWrite, bool *socketDisconnect);
@@ -96,7 +97,6 @@ private:
                             bool *selectForRead, bool *selectForWrite, bool *socketDisconnect);
 
     static void run(std::function<void(void)> fn);
-    static void runOnMainThread(std::function<void(void)> fn);
     static void runAsync(std::function<void(void)> fn);
 
     static QEventDispatcherWasm *g_mainThreadEventDispatcher;
